# Synthetic_Synapses_NMIAI

./: .gitignore  .gitmodules  LICENSE.md  README.md  gitstats_sincestart.ps1  nm-i-ai-postmortem.html
dagthomas/astar-island-server/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yml  populate_fast.py  seed_data.py  simulate_full_game.py  simulate_game.py
dagthomas/astar-island-server/docs/: intro-video-manuscript.md
dagthomas/astar-island-server/frontend/: package-lock.json  package.json  svelte.config.js  vite.config.ts
dagthomas/astar-island-server/frontend/src/: app.css
dagthomas/astar-island-server/frontend/src/lib/: api.ts  chart-theme.ts  types.ts  utils.ts
dagthomas/astar-island-server/frontend/src/lib/components/: CyberChart.svelte  GridThumbnail.svelte  GridViewer.svelte  Sidebar.svelte  StatusBadge.svelte
dagthomas/astar-island-server/frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
dagthomas/astar-island-server/frontend/src/routes/rounds/: +page.svelte
dagthomas/astar-island-server/migrations/: 001_init.sql
dagthomas/astar-island-server/src/: config.rs  db.rs  main.rs  models.rs
dagthomas/astar-island-server/src/admin/: routes.rs
dagthomas/astar-island-server/src/api/: analysis.rs  budget.rs  leaderboard.rs  mod.rs  my_rounds.rs  rounds.rs  simulate.rs  submit.rs
dagthomas/astar-island-server/src/auth/: jwt.rs  middleware.rs  routes.rs
dagthomas/astar-island-server/src/simulation/: cell.rs  engine.rs  grid.rs  mapgen.rs  mod.rs  params.rs  scoring.rs  terrain.rs
dagthomas/astar-island-server/static/: index.html
(+3516 files in other folders)
